Bug 504385 - When trying to irrevocably delete a downloaded file from the notification, nothing happens
Summary: When trying to irrevocably delete a downloaded file from the notification, no...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.3.90
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-17 08:47 UTC by zxvb12z
Modified: 2025-05-23 17:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zxvb12z 2025-05-17 08:47:58 UTC
SUMMARY
When trying to irrevocably delete a downloaded file from the notification, nothing happens.
Moving to the recycle bin works properly.

STEPS TO REPRODUCE
1. download file
2. select advanced options , delete
3. check that the file is still in place

OBSERVED RESULT
file not delete 

EXPECTED RESULT
irrevocably delete file

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 6.3.90
KDE Plasma Version: 6.3.9
KDE Frameworks Version: 6.14
Qt Version: 6.9
firefox: 138
Plasma Integration addon: 1.9.1

ADDITIONAL INFORMATION
this problem has existed before, at least since version 6.3, so it's not a beta issue, it's just that I haven't reported it previously
Comment 1 Bug Janitor Service 2025-05-17 09:35:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5481
Comment 2 Nate Graham 2025-05-20 15:13:42 UTC
Git commit f81dd70a3501f1011d73128277c4aba87014c481 by Nate Graham, on behalf of Kai Uwe Broulik.
Committed on 20/05/2025 at 13:37.
Pushed by broulik into branch 'master'.

applets/notifications: Don't set a parent for WidgetsAskUserActionHandler

The notification popup gets destroyed as soon as the user clicked the menu item,
so the handler is destroyed (curiously still leaving the KMessageDialog up) and
askUserDeleteResult is never emitted.

M  +4    -2    applets/notifications/filemenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f81dd70a3501f1011d73128277c4aba87014c481
Comment 3 Kai Uwe Broulik 2025-05-20 15:43:14 UTC
Git commit 7dff2f025da66873911eb1a66fbdded080c7b473 by Kai Uwe Broulik.
Committed on 20/05/2025 at 15:14.
Pushed by broulik into branch 'Plasma/6.4'.

applets/notifications: Don't set a parent for WidgetsAskUserActionHandler

The notification popup gets destroyed as soon as the user clicked the menu item,
so the handler is destroyed (curiously still leaving the KMessageDialog up) and
askUserDeleteResult is never emitted.


(cherry picked from commit f81dd70a3501f1011d73128277c4aba87014c481)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +4    -2    applets/notifications/filemenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7dff2f025da66873911eb1a66fbdded080c7b473
Comment 4 Kai Uwe Broulik 2025-05-22 13:12:54 UTC
Git commit 41a554e6d9b3e58ac3d7375eb4fbd22acca3a5af by Kai Uwe Broulik.
Committed on 20/05/2025 at 16:00.
Pushed by broulik into branch 'Plasma/6.3'.

applets/notifications: Don't set a parent for WidgetsAskUserActionHandler

The notification popup gets destroyed as soon as the user clicked the menu item,
so the handler is destroyed (curiously still leaving the KMessageDialog up) and
askUserDeleteResult is never emitted.


(cherry picked from commit f81dd70a3501f1011d73128277c4aba87014c481)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

(cherry picked from commit 7dff2f025da66873911eb1a66fbdded080c7b473)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +4    -2    applets/notifications/filemenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/41a554e6d9b3e58ac3d7375eb4fbd22acca3a5af
Comment 5 Kai Uwe Broulik 2025-05-22 16:48:23 UTC
Git commit 932624b15b924e604fbdbdeda5d0664e078b66bf by Kai Uwe Broulik.
Committed on 22/05/2025 at 13:15.
Pushed by broulik into branch 'Plasma/5.27'.

applets/notifications: Don't set a parent for WidgetsAskUserActionHandler

The notification popup gets destroyed as soon as the user clicked the menu item,
so the handler is destroyed (curiously still leaving the KMessageDialog up) and
askUserDeleteResult is never emitted.


(cherry picked from commit f81dd70a3501f1011d73128277c4aba87014c481)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

(cherry picked from commit 7dff2f025da66873911eb1a66fbdded080c7b473)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

(cherry picked from commit 41a554e6d9b3e58ac3d7375eb4fbd22acca3a5af)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +4    -2    applets/notifications/filemenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/932624b15b924e604fbdbdeda5d0664e078b66bf