applets/notifications: Don't set a parent for WidgetsAskUserActionHandler

The notification popup gets destroyed as soon as the user clicked the menu item,
so the handler is destroyed (curiously still leaving the KMessageDialog up) and
askUserDeleteResult is never emitted.

BUG: 504385